cmake_minimum_required(VERSION 3.14)
# project(MyStore VERSION 0.0.1 LANGUAGES C CXX)
project(MyStore VERSION 0.0.1 LANGUAGES C CXX)
include_directories(src)
aux_source_directory(src/db DB_DIR_SRCS)
aux_source_directory(src/logfile LOGFILE_DIR_SRCS)
aux_source_directory(src/logger LOGGER_DIR_SRCS)
aux_source_directory(src/test TEST_DIR_SRCS)
aux_source_directory(src/util UTIL_DIR_SRCS)
aux_source_directory(src/wal WAL_DIR_SRCS)

message(${PROJECT_SOURCE_DIR})
aux_source_directory(src SRC_DIR_SRCS)
# add_executable(main src/main.cpp src/test/caseone.cpp src/core/tree.cpp)
add_executable(mystore ${DB_DIR_SRCS} ${LOGFILE_DIR_SRCS} ${LOGGER_DIR_SRCS} ${TEST_DIR_SRCS} ${UTIL_DIR_SRCS} ${WAL_DIR_SRCS} ${SRC_DIR_SRCS})